[tool.poetry]
name = "reportportal-ai-assistant"
version = "0.1.0"
description = "AI-powered assistant for ReportPortal with vector database integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "reportportal_ai", from = "src"}]

[tool.poetry.dependencies]
python = "<3.12.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
structlog = "^23.1.0"
click = "^8.1.7"
rich = "^13.6.0"
tqdm = "^4.66.1"
sentence-transformers = "^2.2.2"
setuptools = "^80.9.0"
chromadb = "^1.0.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
reportportal_ai = "reportportal_ai.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true